--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,10 +19,10 @@
     <TextView
         android:id="@+id/text_new_password"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_height="112dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/marginTopLogin"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="8dp"
         android:fontFamily="monospace"
         android:text="PARA SUA SEGURANÇA, INFORME O CÓDIGO ENVIADO PARA O SEU
 E-MAIL:"
@@ -31,92 +38,133 @@ E-MAIL:"
         android:id="@+id/email_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/email_test"
-        android:textSize="@dimen/email_size"
         android:textColor="@color/dark_orange"
+        android:textSize="@dimen/email_size"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_new_password" />
+        app:layout_constraintEnd_toEndOf="@+id/text_new_password"
+        app:layout_constraintStart_toStartOf="@+id/text_new_password"
+        app:layout_constraintTop_toBottomOf="@+id/text_new_password" />
 
-    <EditText
+    <!--<EditText
         android:id="@+id/token_new_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext_bottom_border"
         android:hint="@string/validation_token"
+        android:paddingLeft="@dimen/hint_position"
         android:textColor="@color/titlecolor"
+        app:layout_constraintBottom_toTopOf="@+id/text2_new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_new_password" />
+        app:layout_constraintTop_toBottomOf="@+id/email_new_password" />-->
 
-    <TextView
-        android:id="@+id/text_not_recive_new_password"
-        android:layout_width="wrap_content"
+    <com.example.android.movieapp.NewAccountError
+        android:id="@+id/token_new_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:text="@string/code_not_recive"
-        android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toStartOf="@+id/text_link_new_password"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toTopOf="@+id/text2_new_password"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/token_new_password" />
+        app:layout_constraintTop_toBottomOf="@+id/email_new_password" ></com.example.android.movieapp.NewAccountError>
 
-    <TextView
-        android:id="@+id/text_link_new_password"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="28dp"
-        android:text="@string/send_again"
-        android:textColor="@color/light_orange"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/token_new_password" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="@+id/token_new_password"
+        app:layout_constraintStart_toStartOf="@+id/token_new_password"
+        app:layout_constraintTop_toBottomOf="@+id/token_new_password">
+
+        <TextView
+            android:id="@+id/text_not_recive_new_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+
+            android:text="@string/code_not_recive"
+            android:textColor="@color/titlecolor" />
+
+
+        <TextView
+            android:id="@+id/text_link_new_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/send_again"
+            android:textColor="@color/light_orange"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text2_new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="monospace"
         android:text="@string/create_new_password"
         android:textAlignment="center"
         android:textSize="@dimen/title_size"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button_new_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_not_recive_new_password" />
+        app:layout_constraintTop_toBottomOf="@+id/email_new_password" />
 
-    <EditText
-        android:id="@+id/new_password_edit_new_passaword"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/edittext_bottom_border"
-        android:hint="@string/new_password_hint"
-        android:textColor="@color/titlecolor"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/button_new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text2_new_password" />
+        app:layout_constraintTop_toBottomOf="@+id/text2_new_password">
 
-    <EditText
-        android:id="@+id/confirm_new_password"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/edittext_bottom_border"
-        android:hint="@string/confirm_new_password"
-        android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_password_edit_new_passaword" />
+       <!-- <EditText
+
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_height"
+            android:background="@drawable/edittext_bottom_border"
+            android:hint="@string/new_password_hint"
+            android:paddingLeft="@dimen/hint_position"
+            android:textColor="@color/titlecolor"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="377dp" /> -->
+
+        <com.example.android.movieapp.NewAccountError
+            android:id="@+id/new_password_edit_new_passaword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></com.example.android.movieapp.NewAccountError>
+
+        <EditText
+            android:id="@+id/confirm_new_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_height"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edittext_bottom_border"
+            android:hint="@string/confirm_new_password"
+            android:paddingLeft="@dimen/hint_position"
+            android:textColor="@color/titlecolor"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="435dp" />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/button_new_password"
@@ -124,13 +172,14 @@ E-MAIL:"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="@dimen/button_bottom"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
         android:text="@string/change_password"
         android:textColor="@color/white"
+        android:onClick="launchNewPassworod"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
