--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,16 +20,15 @@
         android:id="@+id/text_new_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/marginTopLogin"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="8dp"
         android:fontFamily="monospace"
         android:text="@string/text_new_account"
         android:textAlignment="center"
         android:textSize="@dimen/title_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,113 +36,65 @@
         android:id="@+id/email_new_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="8dp"
         android:text="@string/email_test"
         android:textColor="@color/titlecolor"
         android:textSize="@dimen/email_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_new_account"
+        app:layout_constraintStart_toStartOf="@+id/text_new_account"
         app:layout_constraintTop_toBottomOf="@+id/text_new_account" />
 
-    <!--<EditText
-        android:id="@+id/nameNewAccount"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="92dp"
-        android:background="@drawable/edittext_bottom_border"
-        android:ems="10"
-        android:hint="@string/complete_name"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.625"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailNewAccount" /> -->
 
-    <com.example.android.movieapp.NewAccountError
-        android:id="@+id/name_new_account"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="@dimen/small_dimens_marginLR"
-        app:layout_constraintBottom_toTopOf="@+id/button_token_validation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_new_account"></com.example.android.movieapp.NewAccountError>
-
-    <!--<EditText
-        android:id="@+id/userNewAccount"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/name_user"
-        android:background="@drawable/edittext_bottom_border"
-        android:inputType="textPersonName"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameNewAccount" />
-        -->
-
-    <com.example.android.movieapp.NewAccountError
-        android:id="@+id/user_new_account"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="@dimen/small_dimens_marginLR"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_new_account"></com.example.android.movieapp.NewAccountError>
-
-   <!-- <EditText
-        android:id="@+id/passwordNewAccount"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:background="@drawable/edittext_bottom_border"
-        android:inputType="textPersonName"
-        android:hint="@string/password_hint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNewAccount"
-        /> -->
-
-    <com.example.android.movieapp.NewAccountError
-        android:id="@+id/password_new_account"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/button_new_account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_new_account"></com.example.android.movieapp.NewAccountError>
+        app:layout_constraintTop_toBottomOf="@+id/email_new_account">
+
+        <com.example.android.movieapp.NewAccountError
+            android:id="@+id/name_new_account"
+            android:layout_width="match_parent"
+            android:layout_height="77dp"
+            tools:layout_editor_absoluteX="24dp"
+            tools:layout_editor_absoluteY="152dp"></com.example.android.movieapp.NewAccountError>
 
 
+        <com.example.android.movieapp.NewAccountError
+            android:id="@+id/user_new_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="246dp"></com.example.android.movieapp.NewAccountError>
 
+
+        <com.example.android.movieapp.NewAccountError
+            android:id="@+id/password_new_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="24dp"
+            tools:layout_editor_absoluteY="330dp"></com.example.android.movieapp.NewAccountError>
+
+    </LinearLayout>
     <Button
         android:id="@+id/button_new_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:layout_marginBottom="@dimen/button_bottom"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
+        android:onClick="buttonNewAccount"
         android:text="@string/advance"
         android:textColor="@color/white"
-        android:onClick="buttonNewAccount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_new_account"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
