--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -20,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="@dimen/marginTopLogin"
+        android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="@string/text_password_login"
         android:textColor="@color/titlecolor"
@@ -28,43 +33,47 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/view_password_login" />
 
     <TextView
         android:id="@+id/email_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/titlecolor"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/email_test"
+        android:textColor="@color/titlecolor"
         android:textSize="@dimen/email_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_password_login" />
+        app:layout_constraintBottom_toTopOf="@+id/password_edit_password"
+        app:layout_constraintStart_toStartOf="@+id/password_edit_password" />
 
     <EditText
         android:id="@+id/password_edit_password"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
+        android:inputType="textPassword"
+        android:layout_height="52dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext_bottom_border"
         android:hint="@string/password_hint"
+        android:paddingLeft="@dimen/hint_position"
         android:textColor="@color/titlecolor"
+        app:layout_constraintBottom_toTopOf="@+id/button_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_password" />
+        app:layout_constraintTop_toBottomOf="@+id/text_password_login" />
 
     <TextView
         android:id="@+id/text2_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="8dp"
         android:text="@string/password_forgot"
         android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/password_edit_password"
         app:layout_constraintTop_toBottomOf="@+id/password_edit_password" />
 
     <Button
@@ -76,13 +85,15 @@
         android:layout_marginBottom="@dimen/button_bottom"
         android:background="@drawable/shape"
         android:backgroundTint="@color/light_blue"
-        android:text="@string/log_in"
         android:onClick="buttonPasswordLogin"
+        android:text="@string/log_in"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
 
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
