--- a/app/src/main/res/layout/activity_reset_password_confirm.xml
+++ b/app/src/main/res/layout/activity_reset_password_confirm.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -33,25 +39,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
         android:text="@string/email_test"
-        android:textSize="@dimen/email_size"
         android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="@dimen/email_size"
+        app:layout_constraintEnd_toEndOf="@+id/text_reset_password"
+        app:layout_constraintStart_toStartOf="@+id/text_reset_password"
         app:layout_constraintTop_toBottomOf="@+id/text_reset_password" />
 
     <EditText
         android:id="@+id/edit_user_reset_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
-        android:hint="@string/name_user"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
         android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext_bottom_border"
+        android:hint="@string/name_user"
+        android:paddingLeft="@dimen/hint_position"
+        app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_reset_password" />
 
@@ -72,3 +79,5 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
