--- a/app/src/main/res/layout/activity_sign_up_continue.xml
+++ b/app/src/main/res/layout/activity_sign_up_continue.xml
@@ -13,9 +13,8 @@
         android:id="@+id/text_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginTop="@dimen/marginTopLogin"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="monospace"
         android:text="@string/text_sign_up_continue"
         android:textAlignment="center"
@@ -29,34 +28,38 @@
         android:id="@+id/email_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginTop="8dp"
         android:text="@string/email_test"
         android:textColor="@color/dark_orange"
-        android:textStyle="bold"
         android:textSize="@dimen/email_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/text_continue"
+        app:layout_constraintStart_toStartOf="@+id/text_continue"
         app:layout_constraintTop_toBottomOf="@+id/text_continue" />
 
     <EditText
         android:id="@+id/code_continue"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/edittext_bottom_border"
         android:hint="@string/code_hint"
+        android:paddingLeft="@dimen/hint_position"
+        app:layout_constraintBottom_toTopOf="@+id/button_sign_up_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_continue" />
 
     <TextView
         android:id="@+id/text_not_recive_continue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
+        android:layout_width="146dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
+        android:layout_marginEnd="8dp"
         android:text="@string/code_not_recive"
         android:textColor="@color/titlecolor"
         app:layout_constraintEnd_toStartOf="@+id/text_link_continue"
@@ -67,9 +70,9 @@
     <TextView
         android:id="@+id/text_link_continue"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="15dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/send_again"
         android:textColor="@color/light_orange"
         android:textStyle="bold"
@@ -80,16 +83,16 @@
         android:id="@+id/button_sign_up_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_dimens_marginLR"
-        android:layout_marginEnd="@dimen/small_dimens_marginLR"
-        android:layout_marginBottom="@dimen/button_bottom"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/shape"
+
         android:backgroundTint="@color/light_blue"
         android:text="@string/code_validation"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent" />
 
 
