--- a/app/src/main/res/layout/new_account_error.xml
+++ b/app/src/main/res/layout/new_account_error.xml
@@ -10,14 +10,14 @@
         android:id="@+id/edit_new_account_error"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_height"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:paddingLeft="10dp"
         android:background="@drawable/edittext_bottom_border"
         android:hint="@string/code_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/text_new_account_error"
