first commit in this branch. Action bar, Bottom Navigation with tree fragments.

--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -152,7 +152,7 @@ E-MAIL:"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></com.example.android.movieapp.NewAccountError>
 
-        <EditText
+      <!--  <EditText
             android:id="@+id/confirm_new_password"
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_height"
@@ -162,7 +162,12 @@ E-MAIL:"
             android:paddingLeft="@dimen/hint_position"
             android:textColor="@color/titlecolor"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="435dp" />
+            tools:layout_editor_absoluteY="435dp" />-->
+
+        <com.example.android.movieapp.NewAccountError
+            android:id="@+id/confirm_new_password"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></com.example.android.movieapp.NewAccountError>
     </LinearLayout>
 
 
