--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,17 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="Login" parent="AppTheme">
-        <item name="android:fontFamily"> </item></style>
+
+    <style name="HomeBar" >
+        <!-- Customize your theme here. -->
+        <item name="android:background">@color/light_blue</item>
+        <item name="android:text">"Oi"</item>
+    </style>
+
+
+
+
+
+
 
 </resources>
