--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -64,14 +64,14 @@ E-MAIL:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_new_password" />-->
 
-    <com.example.android.movieapp.NewAccountError
+    <com.example.android.movieapp.loginScreen.NewAccountError
         android:id="@+id/token_new_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/text2_new_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_new_password" ></com.example.android.movieapp.NewAccountError>
+        app:layout_constraintTop_toBottomOf="@+id/email_new_password" ></com.example.android.movieapp.loginScreen.NewAccountError>
 
 
     <LinearLayout
@@ -147,10 +147,10 @@ E-MAIL:"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="377dp" /> -->
 
-        <com.example.android.movieapp.NewAccountError
+        <com.example.android.movieapp.loginScreen.NewAccountError
             android:id="@+id/new_password_edit_new_passaword"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.example.android.movieapp.NewAccountError>
+            android:layout_height="match_parent"></com.example.android.movieapp.loginScreen.NewAccountError>
 
       <!--  <EditText
             android:id="@+id/confirm_new_password"
@@ -164,10 +164,10 @@ E-MAIL:"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="435dp" />-->
 
-        <com.example.android.movieapp.NewAccountError
+        <com.example.android.movieapp.loginScreen.NewAccountError
             android:id="@+id/confirm_new_password"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.example.android.movieapp.NewAccountError>
+            android:layout_height="match_parent"></com.example.android.movieapp.loginScreen.NewAccountError>
     </LinearLayout>
 
 
