--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -13,12 +13,12 @@
     android:orientation="vertical"
     >
 
- <com.example.android.movieapp.SignInError
+ <com.example.android.movieapp.loginScreen.SignInError
      android:id="@+id/view_password_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintStart_toStartOf="parent"></com.example.android.movieapp.SignInError>
+     app:layout_constraintStart_toStartOf="parent"></com.example.android.movieapp.loginScreen.SignInError>
 
     <TextView
         android:id="@+id/text_password_login"
