--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="medium_orange">#f44336</color>
     <color name="white">#ffffff</color>
     <color name="light_blue">#129793</color>
+    <color name="yellow">#ffcd00</color>
 </resources>
