--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".homeScreen.Home">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -48,10 +48,9 @@
 
         </android.support.constraint.ConstraintLayout>
 
-
-
-
     </android.support.v7.widget.Toolbar>
+
+
 
     <FrameLayout
         android:id="@+id/fragment_content"
@@ -61,10 +60,8 @@
         android:layout_below="@id/my_toolbar"
        >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="OLA"/>
+
+
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -75,7 +72,7 @@
         android:layout_height="56dp"
         android:theme="@style/HomeBar"
         android:layout_alignParentBottom="true"
-
+        app:itemIconTint="@color/white"
         app:menu="@menu/bottom_navigation"/>
 
 
