--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,13 @@
         <item name="android:text">"Oi"</item>
     </style>
 
+    <style name="TopNavagationBar" >
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/light_blue</item>
+
+    </style>
+
 
 
 
