--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -16,6 +16,17 @@
     android:orientation="vertical"
     android:background="@color/backroundLogin">
 
+    <ImageButton
+        android:id="@+id/back_new_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:onClick="back_activity"
+        android:src="@drawable/ic_back_screen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/text_new_password"
         android:layout_width="wrap_content"
@@ -99,6 +110,8 @@ E-MAIL:"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:clickable="true"
+            android:onClick="lauchLink"
             android:text="@string/send_again"
             android:textColor="@color/light_orange"
             android:textStyle="bold" />
@@ -124,6 +137,7 @@ E-MAIL:"
         app:layout_constraintTop_toBottomOf="@+id/email_new_password" />
 
     <LinearLayout
+        android:id="@+id/linearLayout_new_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -136,7 +150,7 @@ E-MAIL:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text2_new_password">
 
-       <!-- <EditText
+        <!-- <EditText
 
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_height"
@@ -152,7 +166,7 @@ E-MAIL:"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></com.example.android.movieapp.loginScreen.NewAccountError>
 
-      <!--  <EditText
+        <!--  <EditText
             android:id="@+id/confirm_new_password"
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_height"
@@ -169,6 +183,17 @@ E-MAIL:"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></com.example.android.movieapp.loginScreen.NewAccountError>
     </LinearLayout>
+
+    <com.example.android.movieapp.loginScreen.Loading
+        android:id="@+id/loading_new_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_new_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_new_password"></com.example.android.movieapp.loginScreen.Loading>
 
 
     <Button
