--- a/app/src/main/res/layout/activity_sign_up_continue.xml
+++ b/app/src/main/res/layout/activity_sign_up_continue.xml
@@ -1,99 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backroundLogin"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/PaddinLRContraint"
-    android:paddingRight="@dimen/PaddinLRContraint">
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/text_continue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="monospace"
-        android:text="@string/text_sign_up_continue"
-        android:textAlignment="center"
-        android:textSize="@dimen/title_size"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/email_continue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/email_test"
-        android:textColor="@color/dark_orange"
-        android:textSize="@dimen/email_size"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/text_continue"
-        app:layout_constraintStart_toStartOf="@+id/text_continue"
-        app:layout_constraintTop_toBottomOf="@+id/text_continue" />
-
-    <EditText
-        android:id="@+id/code_continue"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/edittext_bottom_border"
-        android:hint="@string/code_hint"
-        android:paddingLeft="@dimen/hint_position"
-        app:layout_constraintBottom_toTopOf="@+id/button_sign_up_continue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_continue" />
+        android:layout_height="match_parent"
+        android:background="@color/backroundLogin"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/PaddinLRContraint"
+        android:paddingRight="@dimen/PaddinLRContraint">
+        <ImageButton
+            android:id="@+id/back_new_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@null"
+            android:onClick="back_activity"
+            android:src="@drawable/ic_back_screen"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_not_recive_continue"
-        android:layout_width="146dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/code_not_recive"
-        android:textColor="@color/titlecolor"
-        app:layout_constraintEnd_toStartOf="@+id/text_link_continue"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/code_continue" />
+        <TextView
+            android:id="@+id/text_continue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="monospace"
+            android:text="@string/text_sign_up_continue"
+            android:textAlignment="center"
+            android:textSize="@dimen/title_size"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_link_continue"
-        android:layout_width="wrap_content"
-        android:layout_height="15dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/send_again"
-        android:textColor="@color/light_orange"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/code_continue" />
+        <TextView
+            android:id="@+id/email_continue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/email_test"
+            android:textColor="@color/dark_orange"
+            android:textSize="@dimen/email_size"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/text_continue"
+            app:layout_constraintStart_toStartOf="@+id/text_continue"
+            app:layout_constraintTop_toBottomOf="@+id/text_continue" />
 
-    <Button
-        android:id="@+id/button_sign_up_continue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/shape"
+        <!-- <EditText
+             android:id="@+id/code_continue"
+             android:layout_width="match_parent"
+             android:layout_height="@dimen/edit_height"
+             android:layout_marginStart="8dp"
+             android:layout_marginTop="8dp"
+             android:layout_marginEnd="8dp"
+             android:layout_marginBottom="8dp"
+             android:background="@drawable/edittext_bottom_border"
+             android:hint="@string/code_hint"
+             android:paddingLeft="@dimen/hint_position"
+             app:layout_constraintBottom_toTopOf="@+id/button_sign_up_continue"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/email_continue" /> -->
 
-        android:backgroundTint="@color/light_blue"
-        android:text="@string/code_validation"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <android.support.v7.widget.LinearLayoutCompat
+            android:id="@+id/linearLayoutCompat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/button_sign_up_continue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_continue">
+
+            <com.example.android.movieapp.loginScreen.NewAccountError
+                android:id="@+id/code_continue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/button_sign_up_continue"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/email_continue"></com.example.android.movieapp.loginScreen.NewAccountError>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/text_not_recive_continue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/code_not_recive"
+                    android:textColor="@color/titlecolor" />
+
+                <TextView
+                    android:id="@+id/text_link_continue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:onClick="lauchLink"
+                    android:text="@string/send_again"
+                    android:textColor="@color/light_orange"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.LinearLayoutCompat>
+
+        <com.example.android.movieapp.loginScreen.Loading
+            android:id="@+id/loading_sign_up_continue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_sign_up_continue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"/>
+
+        <Button
+            android:id="@+id/button_sign_up_continue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="@color/light_blue"
+            android:onClick="launchSignUpContinue"
+            android:text="@string/code_validation"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
