--- a/app/src/main/res/layout/activity_token_validation.xml
+++ b/app/src/main/res/layout/activity_token_validation.xml
@@ -6,112 +6,155 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/PaddinLRContraint"
-    android:paddingRight="@dimen/PaddinLRContraint"
-    android:orientation="vertical"
-    android:background="@color/backroundLogin"
-    >
-
-
-    <TextView
-        android:id="@+id/text_token"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="@dimen/marginTopLogin"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="monospace"
-        android:text="@string/text_token_validation"
-        android:textAlignment="center"
-        android:textSize="@dimen/title_size"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/email_token"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/email_test"
-        android:textColor="@color/dark_orange"
-        android:textSize="@dimen/email_size"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/text_token"
-        app:layout_constraintStart_toStartOf="@+id/text_token"
-        app:layout_constraintTop_toBottomOf="@+id/text_token" />
-
-    <EditText
-        android:id="@+id/code_token"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_height"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/edittext_bottom_border"
-        android:hint="@string/code_hint"
-        android:paddingLeft="@dimen/hint_position"
-        app:layout_constraintBottom_toTopOf="@+id/button_token_validation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_token" />
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/PaddinLRContraint"
+        android:paddingRight="@dimen/PaddinLRContraint"
+        android:orientation="vertical"
+        android:background="@color/backroundLogin"
+        >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/code_token"
-        app:layout_constraintHorizontal_bias="0.821"
-        app:layout_constraintStart_toStartOf="@+id/code_token"
-        app:layout_constraintTop_toBottomOf="@+id/code_token">
+        <ImageButton
+            android:id="@+id/back_new_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@null"
+            android:onClick="back_activity"
+            android:src="@drawable/ic_back_screen"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
-            android:id="@+id/text_link_token"
+            android:id="@+id/text_token"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-
+            android:layout_marginTop="@dimen/marginTopLogin"
             android:layout_marginEnd="8dp"
-            android:text="@string/code_not_recive"
-            android:textColor="@color/titlecolor" />
+            android:fontFamily="monospace"
+            android:text="@string/text_token_validation"
+            android:textAlignment="center"
+            android:textSize="@dimen/title_size"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/link_token"
+            android:id="@+id/email_token"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/email_test"
+            android:textColor="@color/dark_orange"
+            android:textSize="@dimen/email_size"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/text_token"
+            app:layout_constraintStart_toStartOf="@+id/text_token"
+            app:layout_constraintTop_toBottomOf="@+id/text_token" />
 
+        <!--/ <EditText
+             android:id="@+id/code_token"
+             android:layout_width="match_parent"
+             android:layout_height="@dimen/edit_height"
+             android:layout_marginStart="8dp"
+             android:layout_marginTop="8dp"
+             android:layout_marginEnd="8dp"
+             android:layout_marginBottom="8dp"
+             android:background="@drawable/edittext_bottom_border"
+             android:hint="@string/code_hint"
+             android:paddingLeft="@dimen/hint_position"
+             app:layout_constraintBottom_toTopOf="@+id/button_token_validation"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/email_token" />
+             -->
+
+        <android.support.v7.widget.LinearLayoutCompat
+            android:id="@+id/linearLayoutCompat2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/send_again"
-            android:textColor="@color/light_orange"
-            android:textStyle="bold" />
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/button_token_validation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_token">
+
+            <com.example.android.movieapp.loginScreen.NewAccountError
+                android:id="@+id/code_token"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/button_token_validation"></com.example.android.movieapp.loginScreen.NewAccountError>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/text_link_token"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/code_not_recive"
+                    android:textColor="@color/titlecolor" />
+
+                <TextView
+                    android:id="@+id/link_token"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:clickable="true"
+                    android:onClick="lauchLink"
+                    android:text="@string/send_again"
+                    android:textColor="@color/light_orange"
+                    android:textStyle="bold" />
 
 
-    </LinearLayout>
+            </LinearLayout>
 
 
+        </android.support.v7.widget.LinearLayoutCompat>
+
+        <com.example.android.movieapp.loginScreen.Loading
+            android:id="@+id/loading_token_validation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_token_validation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"></com.example.android.movieapp.loginScreen.Loading>
 
 
-    <Button
-        android:id="@+id/button_token_validation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/shape"
-        android:backgroundTint="@color/light_blue"
-        android:text="@string/code_validation"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/button_token_validation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="@color/light_blue"
+            android:onClick="launchToken"
+            android:text="@string/code_validation"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 </ScrollView>
