--- a/app/src/main/res/layout/new_account_error.xml
+++ b/app/src/main/res/layout/new_account_error.xml
@@ -25,11 +25,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12dp"
         android:text="Nome Invalido"
-        android:visibility="invisible"
         android:textColor="@color/medium_orange"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/image_new_account_error"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_new_account_error" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_new_account_error"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/image_new_account_error"
