--- a/app/src/main/res/layout/movie_item_list.xml
+++ b/app/src/main/res/layout/movie_item_list.xml
@@ -42,11 +42,11 @@
 
     <ImageView
         android:id="@+id/imagemMovie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="220dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="0dp"
         android:elevation="4dp"
         android:paddingBottom="10dp"
@@ -57,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+
         android:layout_marginLeft="20dp"
         android:layout_marginTop="35dp"
         android:layout_toRightOf="@id/imagemMovie"
@@ -67,11 +68,13 @@
             android:id="@+id/movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="8dp"
             android:text="MHANK - SULLY"
             android:textColor=" #333338"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -183,9 +186,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="2dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="10dp">
 
