--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +13,6 @@
     android:layout_height="match_parent"
     android:backgroundTint="#f5f6f7"
     tools:context=".homeScreen.MovieDetailActivity">
-
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar_movie_detail"
@@ -18,7 +24,6 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <android.support.constraint.ConstraintLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -50,81 +55,184 @@
 
     <ImageView
         android:id="@+id/banner_movie_detail"
-        android:layout_below="@+id/my_toolbar_movie_detail"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-
-        />
+        android:layout_below="@+id/my_toolbar_movie_detail"/>
 
     <android.support.v7.widget.CardView
-        android:backgroundTint="@color/white"
+        android:id="@+id/card_view_movie_detail"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/banner_movie_detail"
+        android:layout_marginTop="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_below="@id/banner_movie_detail">
+        android:backgroundTint="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="12dp"
+            android:text="Baseado em fatos reais, a história gira ao redor de Nate Foster, um jovem e idealista agente do FBI que se infiltra num grupo terrorista neonazista. Enquanto enfrenta desafios emocionais para manter sua nova identidade, descobre os perigos de uma perigosa supremacia."
+            android:textColor="#333338"
+            android:textSize="16sp" />
+
+
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/contraint_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/banner_movie_detail"
+            android:layout_marginLeft="170dp"
+            android:layout_toRightOf="@+id/poster_movie_detail"
+            android:elevation="3dp">
+
+            <TextView
+                android:id="@+id/title_movie_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:text="Império - Resistên..."
+                android:textColor="#333338"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/genres_movie_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Action, Adventure, Fantasy"
+
+                app:layout_constraintTop_toBottomOf="@+id/title_movie_detail" />
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:id="@+id/average_movie_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/genres_movie_detail">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_photo_size_select_actual_black_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:text="7,9" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/10" />
+
+            </android.support.v7.widget.LinearLayoutCompat>
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:id="@+id/linearLayoutCompat3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/average_movie_detail">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2009" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:text="UK, USA" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:text="2h 29min" />
+
+            </android.support.v7.widget.LinearLayoutCompat>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Director: James Camaron"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Escritor: James Cameron"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_favorite_movie_item"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_movie"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
     <ImageView
         android:id="@+id/poster_movie_detail"
+        android:layout_width="160dp"
+        android:layout_height="220dp"
+        android:layout_below="@id/my_toolbar_movie_detail"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="120dp"
+        android:elevation="3dp"
+        tools:src="@drawable/banner_movie" />
+
+    <TextView
+        android:id="@+id/similar_options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/my_toolbar_movie_detail"
-        android:elevation="3dp"
-        app:srcCompat="@drawable/banner_movie" />
+        android:layout_below="@id/card_view_movie_detail"
+        android:text="Opções Semelhantes"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
 
-    <android.support.constraint.ConstraintLayout
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_movie_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/banner_movie_detail"
-        android:layout_toRightOf="@+id/poster_movie_detail"
-        android:layout_marginLeft="8dp"
-        android:elevation="3dp"
+        android:layout_below="@id/similar_options"
         >
 
-        <TextView
-            android:id="@+id/title_movie_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Império - Resistên..."/>
-
-        <TextView
-            android:id="@+id/genres_movie_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Action, Adventure, Fantasy"
-
-            app:layout_constraintTop_toBottomOf="@+id/title_movie_detail" />
-
-        <android.support.v7.widget.LinearLayoutCompat
-            android:id="@+id/average_movie_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/genres_movie_detail"
-            >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_photo_size_select_actual_black_24dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="7,9"
-                android:layout_marginLeft="2dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="/10"/>
-
-        </android.support.v7.widget.LinearLayoutCompat>
-
-
-    </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.RecyclerView>
 
 
 </RelativeLayout>
+
+</ScrollView>
